--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "vue": "^2.5.0",
+        "vue-simple-search-dropdown": "^1.0.1",
         "vue-sweetalert2": "^3.0.5"
     }
 }
