change package name to influencerreach

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reach/monthly-report",
+    "name": "influencerreach/monthly-report",
     "description": "A Laravel Nova tool.",
     "keywords": [
         "laravel",
