--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-mix": "^1.0"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "vue": "^2.5.0",
         "vue-sweetalert2": "^3.0.5"
     }
